--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
 	<div class="container">
 		<div class="inner">
 			<div class="item">
-				<img src="1.png" alt="Burger" class="img">
+				<img src="1.png" alt="Шлем" class="img">
 				<button class="btn" id="btn1">Add</button>
 			</div>
 			<div class="item">
-				<img src="1.png" alt="Burger" class="img">
+				<img src="2.png" alt="Шлем 2" class="img">
 			    <button class="btn" id="btn2">Add</button>
 		    </div>
 			<div class="item">
-				<img src="1.png" alt="Burger" class="img">
+				<img src="3.png" alt="Шлем 3" class="img">
 			    <button class="btn" id="btn3">Add</button>
 			</div>
 			<div class="item">
