--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<div class="inner">
 			<div class="item">
 				<img src="1.png" alt="Шлем" class="img">
-				<button class="btn" id="btn1">Add</button>
+				<button class="btn" id="btn1">Добавить</button>
 			</div>
 			<div class="item">
 				<img src="2.png" alt="Шлем 2" class="img">
